# api-template

./: .gitignore  Cargo.toml  docker-compose.yml  middleware  test-docker-compose.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  macros.rs
api/src/controllers/: auth.rs  mod.rs  user.rs
api/src/extractors/: auth_user.rs  content_type.rs  mod.rs
api/src/middleware/: mod.rs
broker/: Cargo.toml
broker/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
derive_log_and_parse/: Cargo.toml
derive_model/: Cargo.toml
derive_model/src/: lib.rs
derive_query/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: index.rs  users.rs
frontend/src/templates/: index.html  layout.html  user.html  users.html
macros/derive_axum_errors/: Cargo.toml
macros/derive_axum_errors/src/: lib.rs
macros/derive_log_and_parse/: Cargo.toml
macros/derive_log_and_parse/src/: lib.rs
macros/derive_model/src/: lib.rs
macros/derive_new_model/: Cargo.toml
macros/derive_new_model/src/: lib.rs
macros/derive_query/: Cargo.toml
macros/derive_query/src/: lib.rs
macros/derive_update_model/: Cargo.toml
macros/derive_update_model/src/: lib.rs
macros/to_params/: Cargo.toml
macros/to_params/src/: lib.rs
migrations/sql/: 1734026054_rouser.sql  20241216170851_add_users.sql
model/: Cargo.toml
model/src/: error.rs  lib.rs  user.rs  user_permission.rs  user_readmodel.rs
util/: Cargo.toml
util/src/: env.rs  error.rs  lib.rs  macros.rs  store.rs
util/src/tests/: mod.rs
util/tests/: store.rs
