[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
axum-server = "0.7.1"
thiserror.workspace = true
serde.workspace = true
util = {version = "*", path = "../util"}
model = {version = "*", path = "../model"}
derive_axum_errors = {version = "*", path = "../macros/derive_axum_errors"}
env_logger.workspace = true
log.workspace = true
async-trait.workspace = true
utoipa-swagger-ui = { version = "8.1.0", features = ["axum"] }
utoipa.workspace = true
serde_json.workspace = true
reqwest = "0.12.9"
tracing.workspace = true
casdoor-rust-sdk.workspace = true
http = "1.2.0"
axum-core = { version = "0.4.5", features = ["tracing"] }
tokio.workspace = true
base64.workspace = true
