[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-redis.workspace = true
redis.workspace = true
tokio.workspace = true
util = { version = "0.1.0", path = "../util" }
uuid.workspace = true
to_params = {version = "*", path = "../macros/to_params"}
chrono.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
