[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive", "env"] }
util = { version = "*", path = "../util"}
api  = { version = "*", path = "../api"}
env_logger = "0.11.5"
tokio.workspace = true
chrono.workspace = true
envy.workspace = true
dotenv.workspace = true
broker = { version = "0.1.0", path = "../broker" }
to_params = { version = "0.1.0", path = "../macros/to_params" }
serde.workspace = true
serde_json.workspace = true
futures = "0.3.31"
