[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx.workspace = true
uuid.workspace = true
thiserror.workspace = true
util = {path = "../util"}
derive_model = {version = "*", path = "../macros/derive_model"}
derive_new_model = {version = "*", path = "../macros/derive_new_model"}
derive_update_model = {version = "*", path = "../macros/derive_update_model"}
to_params = {version = "*", path = "../macros/to_params"}
derive_query = {version = "*", path = "../macros/derive_query"}
derive_log_and_parse = {version = "*", path = "../macros/derive_log_and_parse"}
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
utoipa.workspace = true
reqwest.workspace = true
casdoor-rust-sdk.workspace = true
log.workspace = true
broker = { version = "0.1.0", path = "../broker" }

[dev-dependencies]
tokio-test = "0.4.4"
