[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
dotenv.workspace = true
envy = "0.4.2"
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio-test.workspace = true
tokio.workspace = true
utoipa.workspace = true
uuid.workspace = true
deadpool-redis.workspace = true
redis.workspace = true
deadpool = { version = "0.12.1", features = ["serde"] }
base64.workspace = true
