[package]
name = "derive_log_and_parse"
version = "0.18.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
util = {version = "*", path = "../../util"}
reqwest.workspace = true
paste = "1.0.15"

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde","serde_json"]
